--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,8 @@ phonenumbers==8.12.18
 pickleshare==0.7.5
 Pillow==8.1.0
 ply==3.11
+praw==7.2.0
+prawcore==2.0.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 protobuf==3.15.1
@@ -125,11 +127,13 @@ tornado==6.1
 tqdm==4.57.0
 traitlets==5.0.5
 typing-extensions==3.7.4.3
+update-checker==0.18.0
 uritemplate==3.0.1
 urllib3==1.26.3
 voluptuous==0.12.1
 wcwidth==0.2.5
 webencodings==0.5.1
+websocket-client==0.57.0
 widgetsnbextension==3.5.1
 xmltodict==0.12.0
 zc.lockfile==2.0
