--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ bleach==3.3.0
 cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.5
+cfgv==3.2.0
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
@@ -18,11 +19,13 @@ cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 dictdiffer==0.8.1
+distlib==0.3.1
 distro==1.5.0
 dpath==2.0.1
 dulwich==0.20.19
 dvc==1.11.16
 entrypoints==0.3
+filelock==3.0.12
 flatten-dict==0.3.0
 flufl.lock==3.2
 ftfy==5.9
@@ -37,6 +40,7 @@ google-auth-httplib2==0.0.4
 googleapis-common-protos==1.52.0
 grandalf==0.6
 httplib2==0.19.0
+identify==1.6.1
 idna==2.10
 ipykernel==5.5.0
 ipython==7.20.0
@@ -65,6 +69,7 @@ nbformat==5.1.2
 nest-asyncio==1.5.1
 networkx==2.5
 nltk==3.5
+nodeenv==1.5.0
 notebook==6.2.0
 numpy==1.20.1
 oauth2client==4.1.3
@@ -81,6 +86,7 @@ Pillow==8.1.0
 ply==3.11
 praw==7.2.0
 prawcore==2.0.0
+pre-commit==2.10.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 protobuf==3.15.1
@@ -130,6 +136,7 @@ typing-extensions==3.7.4.3
 update-checker==0.18.0
 uritemplate==3.0.1
 urllib3==1.26.3
+virtualenv==20.4.2
 voluptuous==0.12.1
 wcwidth==0.2.5
 webencodings==0.5.1
