--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ pexpect==4.8.0
 phonenumbers==8.12.18
 pickleshare==0.7.5
 Pillow==8.1.0
+plotly==4.14.3
 ply==3.11
 praw==7.2.0
 prawcore==2.0.0
@@ -112,6 +113,7 @@ qtconsole==5.0.2
 QtPy==1.9.0
 regex==2020.11.13
 requests==2.25.1
+retrying==1.3.3
 rich==9.11.1
 rsa==4.7.1
 ruamel.yaml==0.16.12
