--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+absl-py==0.11.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
+astunparse==1.6.3
 async-generator==1.10
 atpublic==2.1.3
 attrs==20.3.0
@@ -26,19 +28,25 @@ dulwich==0.20.19
 dvc==1.11.16
 entrypoints==0.3
 filelock==3.0.12
+flatbuffers==1.12
 flatten-dict==0.3.0
 flufl.lock==3.2
 ftfy==5.9
 funcy==1.15
 future==0.18.2
+gast==0.3.3
 gitdb==4.0.5
 GitPython==3.1.13
 google-api-core==1.26.0
 google-api-python-client==1.12.8
 google-auth==1.27.0
 google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
 googleapis-common-protos==1.52.0
 grandalf==0.6
+grpcio==1.32.0
+h5py==2.10.0
 httplib2==0.19.0
 identify==1.6.1
 idna==2.10
@@ -57,8 +65,11 @@ jupyter-console==6.2.0
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
+llvmlite==0.35.0
 mailchecker==4.0.3
+Markdown==3.3.4
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 mistune==0.8.4
@@ -71,8 +82,11 @@ networkx==2.5
 nltk==3.5
 nodeenv==1.5.0
 notebook==6.2.0
-numpy==1.20.1
+numba==0.52.0
+numpy==1.19.5
 oauth2client==4.1.3
+oauthlib==3.1.0
+opt-einsum==3.3.0
 packaging==20.9
 pandas==1.2.2
 pandocfilters==1.4.3
@@ -99,6 +113,7 @@ pydot==1.4.2
 PyDrive2==1.8.0
 Pygments==2.8.0
 pygtrie==2.3.2
+pynndescent==0.5.2
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
@@ -113,10 +128,12 @@ qtconsole==5.0.2
 QtPy==1.9.0
 regex==2020.11.13
 requests==2.25.1
+requests-oauthlib==1.3.0
 retrying==1.3.3
 rich==9.11.1
 rsa==4.7.1
 ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 scikit-learn==0.24.1
 scipy==1.6.1
 seaborn==0.11.1
@@ -126,6 +143,13 @@ shtab==1.3.5
 six==1.15.0
 smmap==3.0.5
 tabulate==0.8.9
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+tensorflow-hub==0.11.0
+tensorflow-text==2.4.3
+termcolor==1.1.0
 terminado==0.9.2
 testpath==0.4.4
 text-unidecode==1.3
@@ -135,6 +159,7 @@ tornado==6.1
 tqdm==4.57.0
 traitlets==5.0.5
 typing-extensions==3.7.4.3
+umap-learn==0.5.1
 update-checker==0.18.0
 uritemplate==3.0.1
 urllib3==1.26.3
@@ -143,6 +168,8 @@ voluptuous==0.12.1
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==0.57.0
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
 xmltodict==0.12.0
 zc.lockfile==2.0
