better and more regexes

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -3,3 +3,4 @@
 /users_df_with_mbti_type.feather
 /stats_and_tokens_per_user.feather
 /stats_and_tokens_per_mbti_type.feather
+/stats_and_tokens_per_letter.feather
