--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ atpublic==2.1.3
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.3.0
+cached-property==1.5.2
 cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.5
@@ -21,17 +22,19 @@ cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 dictdiffer==0.8.1
+diskcache==5.2.1
 distlib==0.3.1
 distro==1.5.0
 dpath==2.0.1
-dulwich==0.20.19
-dvc==1.11.16
+dulwich==0.20.20
+dvc==2.0.5
 emot==2.1
 entrypoints==0.3
 filelock==3.0.12
 flatbuffers==1.12
 flatten-dict==0.3.0
 flufl.lock==3.2
+fsspec==0.8.7
 ftfy==5.9
 funcy==1.15
 future==0.18.2
@@ -106,13 +109,15 @@ pre-commit==2.10.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 protobuf==3.15.1
+psutil==5.8.0
 ptyprocess==0.7.0
 pyarrow==3.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pydot==1.4.2
-PyDrive2==1.8.0
+PyDrive2==1.8.1
+pygit2==1.5.0
 Pygments==2.8.0
 pygtrie==2.3.2
 pynndescent==0.5.2
@@ -124,7 +129,6 @@ python-dateutil==2.8.1
 python-fsutil==0.4.0
 python-slugify==4.0.1
 pytz==2021.1
-pywin32==300
 pywinpty==0.5.7
 PyYAML==5.4.1
 pyzmq==22.0.3
