Add the DVC stage extract_mbti

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,14 +1,31 @@
+vars:
+  - db_path: data/raw/reddit.db
+  - users_feather_path: data/processed/users.feather
+  - comments_feather_path: data/processed/comments.feather
+  - users_mbti_feather_path: data/processed/mbti_per_user.feather
+
 stages:
   db_to_feather:
-    vars:
-    - db_path: data/raw/reddit.db
-    - users_feather_path: data/processed/users.feather
-    - comments_feather_path: data/processed/comments.feather
-    cmd: python mbti_type_from_text/cli/dvc_stages/db_to_feather.py --db_path ${db_path}
-      --users_feather_path ${users_feather_path} --comments_feather_path ${comments_feather_path}
+    cmd: >
+      python mbti_type_from_text/cli/dvc_stages/db_to_feather.py
+      --db_path ${db_path}
+      --users_feather_path ${users_feather_path}
+      --comments_feather_path ${comments_feather_path}
     deps:
-    - ${db_path}
-    - mbti_type_from_text/cli/dvc_stages/db_to_feather.py
+      - ${db_path}
+      - mbti_type_from_text/cli/dvc_stages/db_to_feather.py
     outs:
-    - ${users_feather_path}
-    - ${comments_feather_path}
+      - ${users_feather_path}
+      - ${comments_feather_path}
+  extract_mbti:
+    cmd: >
+      python mbti_type_from_text/cli/dvc_stages/extract_mbti.py
+      --users_feather_path ${users_feather_path}
+      --comments_feather_path ${comments_feather_path}
+      --users_mbti_feather_path ${users_mbti_feather_path}
+    deps:
+      - ${users_feather_path}
+      - ${comments_feather_path}
+      - mbti_type_from_text/cli/dvc_stages/extract_mbti.py
+    outs:
+      - ${users_mbti_feather_path}
