Try to append TF-IDF token vectors to the inputs, reproduce the pipeline

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -88,6 +88,7 @@ stages:
             - cross_validate
         - ${classifiers_config_folder_path}/${key}.json:
             - hyper_parameters
+            - tokens_tfidf_vectorizer
       metrics:
         - ${metrics_folder_path}/${key}.json:
             cache: false
